fixed index html

--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
    <html>
      <head>
        <title>Static HTML Site</title>
-       <p>This is the first paragraph in a simple Static HTML site. There is no ....
- 
+     </head>
+     <body>
+       <p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or JavaScript</strong>.</p>
+     </body>
+   </html>
